fix navbar collapse color

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -9,13 +9,14 @@
   'main'
   'footer';
   grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr auto;
-  height:100%;
+  grid-template-rows: 7rem 1fr auto;
+  height: 100vh;
 }
 
 header{
   grid-area: header;
 }
+
 
 .bg-custom {
   background-color: #eee4ac;
@@ -33,8 +34,14 @@ a.nav-link:hover, a.navbar-brand:hover{
   cursor: pointer;
 }
 
+.navbar-toggler {
+  color: rgba(0,0,0,.5);
+  border-color: rgba(0,0,0,.1);
+}
 
-
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
 /* main */
 main {
   width: 100%;
@@ -59,5 +66,9 @@ footer{
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
